test/analysis/accept/match-literal-sequence.ptk
rule basic = "basic" "words" "after" "another";