test/analysis/reject/duplicate-rule.ptk
# expected: E1300
rule foo = "";
rule foo = "";